[package]
name = "didgen"
version = "0.1.0"
authors = ["Matt Raffel <mattr@kiva.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.1", features = ["yaml"]}
failure = "0.1.6"
libc = "=0.2.66"
rust-base58 = "0.0.4"
sodiumoxide = "0.2.6"